samples/_failures_safe/1761216909_a1d8b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_767746db.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_767746db.c:148:17: error: expected identifier or ‘(’ at end of input
  148 |                 int
      |                 ^~~
./samples/SAFE/__tmp_767746db.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_767746db.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_767746db.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_767746db.c:148:17: error: expected declaration or statement at end of input
